5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1578_1332.log
== TEST (2019-03-13 17:57:21) 
-- CODE:
aresta =
area = 5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:00:12) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5)*aresta**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5)*aresta**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:00:28) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5)*(aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5)*(aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:00:51) 
-- CODE:
aresta = 5
area = (3/2)*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:00:59) 
-- CODE:
aresta = 5
area = (3/2)*(3**1/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.199858
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:01:16) 
-- CODE:
aresta = 5
area = (3/2)*(3**1/2*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:01:52) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:02:55) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:03:02) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:03:48) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:03:52) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.138521
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
